--- a/MyProject/Base.lproj/Main.storyboard
+++ b/MyProject/Base.lproj/Main.storyboard
@@ -16,39 +16,47 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-h6-FhZ">
-                                <rect key="frame" x="20" y="49" width="388" height="365.66666666666669"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="110"/>
-                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
-                                <rect key="frame" x="50" y="422.66666666666674" width="328" height="346.33333333333326"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="VTN-o5-hck" secondAttribute="height" multiplier="145:156" constant="6" id="asE-od-D2Q"/>
-                                </constraints>
-                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cBm-P0-ycF">
+                                <rect key="frame" x="0.0" y="54" width="428" height="828"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-h6-FhZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="269.33333333333331"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="110"/>
+                                        <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
+                                        <rect key="frame" x="0.0" y="279.33333333333337" width="428" height="269.33333333333337"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bd-pX-w2V">
+                                        <rect key="frame" x="0.0" y="558.66666666666663" width="428" height="269.33333333333337"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                        <state key="normal" title="Тыкни"/>
+                                        <connections>
+                                            <action selector="changePicPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CJp-5p-ZRe"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="VTN-o5-hck" firstAttribute="top" secondItem="jcH-h6-FhZ" secondAttribute="bottom" constant="8" id="3Db-3m-8nK"/>
-                            <constraint firstItem="jcH-h6-FhZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="4mt-dU-0CJ"/>
-                            <constraint firstItem="VTN-o5-hck" firstAttribute="centerX" secondItem="jcH-h6-FhZ" secondAttribute="centerX" id="Nh0-cK-IwI"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VTN-o5-hck" secondAttribute="trailing" constant="50" id="TQX-2f-R7v"/>
-                            <constraint firstItem="jcH-h6-FhZ" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="5" id="Xsj-ad-r2q"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VTN-o5-hck" secondAttribute="bottom" constant="123" id="kNQ-Dx-lZ5"/>
-                            <constraint firstItem="jcH-h6-FhZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="yhS-wE-iBG"/>
+                            <constraint firstItem="cBm-P0-ycF" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="4ZS-sU-suZ"/>
+                            <constraint firstItem="cBm-P0-ycF" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Rdl-61-wRq"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cBm-P0-ycF" secondAttribute="trailing" id="TuQ-Cx-85M"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cBm-P0-ycF" secondAttribute="bottom" constant="10" id="reu-06-kWE"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="ChangePicButton" destination="2Bd-pX-w2V" id="kNY-pP-F4u"/>
                         <outlet property="imageView" destination="VTN-o5-hck" id="Sd2-9z-Fqq"/>
                         <outlet property="titleLabel" destination="jcH-h6-FhZ" id="SOi-UR-aHh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="129.375" y="99.295774647887328"/>
+            <point key="canvasLocation" x="128.97196261682242" y="99.136069114470843"/>
         </scene>
     </scenes>
     <resources>
