--- a/MyProject/Base.lproj/Main.storyboard
+++ b/MyProject/Base.lproj/Main.storyboard
@@ -16,20 +16,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cBm-P0-ycF">
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cBm-P0-ycF">
                                 <rect key="frame" x="0.0" y="54" width="428" height="828"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-h6-FhZ">
-                                        <rect key="frame" x="0.0" y="0.0" width="428" height="269.33333333333331"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Картинк" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-h6-FhZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="131.33333333333334"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="110"/>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
-                                        <rect key="frame" x="0.0" y="279.33333333333337" width="428" height="269.33333333333337"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
+                                        <rect key="frame" x="0.0" y="141.33333333333331" width="428" height="619.66666666666674"/>
                                     </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bd-pX-w2V">
-                                        <rect key="frame" x="0.0" y="558.66666666666663" width="428" height="269.33333333333337"/>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bd-pX-w2V">
+                                        <rect key="frame" x="0.0" y="771" width="428" height="57"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                         <state key="normal" title="Тыкни">
@@ -52,7 +52,6 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="ChangePicButton" destination="2Bd-pX-w2V" id="kNY-pP-F4u"/>
                         <outlet property="imageView" destination="VTN-o5-hck" id="Sd2-9z-Fqq"/>
                         <outlet property="titleLabel" destination="jcH-h6-FhZ" id="SOi-UR-aHh"/>
                     </connections>
