--- a/MyProject/Base.lproj/Main.storyboard
+++ b/MyProject/Base.lproj/Main.storyboard
@@ -25,8 +25,12 @@
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
+                                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
                                         <rect key="frame" x="0.0" y="141.33333333333331" width="428" height="619.66666666666674"/>
+                                        <gestureRecognizers/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="Lf6-hR-A5x" appends="YES" id="ZkE-H0-kky"/>
+                                        </connections>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bd-pX-w2V">
                                         <rect key="frame" x="0.0" y="771" width="428" height="57"/>
@@ -57,8 +61,60 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Lf6-hR-A5x">
+                    <connections>
+                        <action selector="tapAction:" destination="BYZ-38-t0r" id="Qte-Ws-U3q"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="128.97196261682242" y="99.136069114470843"/>
+            <point key="canvasLocation" x="-339" y="66"/>
+        </scene>
+        <!--Picture View Controller-->
+        <scene sceneID="fBE-CQ-35g">
+            <objects>
+                <viewController storyboardIdentifier="PictureViewController" id="I3J-l1-Oaz" customClass="PictureViewController" customModule="MyProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xDi-nX-e9k">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="COX-4w-vNw">
+                                <rect key="frame" x="64" y="313" width="300" height="300"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="300" id="EsA-S7-I4a"/>
+                                    <constraint firstAttribute="height" constant="300" id="dPv-r0-aHS"/>
+                                </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="LvM-os-4Z8" appends="YES" id="fUI-C0-8eI"/>
+                                    <outletCollection property="gestureRecognizers" destination="4JN-MB-ViY" appends="YES" id="iNm-2R-6N9"/>
+                                </connections>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="vaR-Jg-JW0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="COX-4w-vNw" firstAttribute="centerY" secondItem="xDi-nX-e9k" secondAttribute="centerY" id="cAQ-lG-lxP"/>
+                            <constraint firstItem="COX-4w-vNw" firstAttribute="centerX" secondItem="xDi-nX-e9k" secondAttribute="centerX" id="hlb-h1-Ouc"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="COX-4w-vNw" id="d21-F4-dE3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="okU-wM-fqR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="LvM-os-4Z8">
+                    <connections>
+                        <action selector="scaling:" destination="I3J-l1-Oaz" id="eaF-wb-KpJ"/>
+                    </connections>
+                </tapGestureRecognizer>
+                <pinchGestureRecognizer id="4JN-MB-ViY">
+                    <connections>
+                        <action selector="pinchAction:" destination="I3J-l1-Oaz" id="ooF-U1-bXC"/>
+                    </connections>
+                </pinchGestureRecognizer>
+            </objects>
+            <point key="canvasLocation" x="553.73831775700933" y="64.794816414686835"/>
         </scene>
     </scenes>
     <resources>
