--- a/MyProject/Base.lproj/Main.storyboard
+++ b/MyProject/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1qa-F6-ija">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cBm-P0-ycF">
-                                <rect key="frame" x="0.0" y="54" width="428" height="828"/>
+                                <rect key="frame" x="0.0" y="98" width="428" height="784"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Картинк" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="jcH-h6-FhZ">
                                         <rect key="frame" x="0.0" y="0.0" width="428" height="131.33333333333334"/>
@@ -26,14 +26,14 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="249" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="VTN-o5-hck">
-                                        <rect key="frame" x="0.0" y="141.33333333333331" width="428" height="619.66666666666674"/>
+                                        <rect key="frame" x="0.0" y="141.33333333333331" width="428" height="575.66666666666674"/>
                                         <gestureRecognizers/>
                                         <connections>
                                             <outletCollection property="gestureRecognizers" destination="Lf6-hR-A5x" appends="YES" id="ZkE-H0-kky"/>
                                         </connections>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" verticalCompressionResistancePriority="752" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Bd-pX-w2V">
-                                        <rect key="frame" x="0.0" y="771" width="428" height="57"/>
+                                        <rect key="frame" x="0.0" y="727" width="428" height="57"/>
                                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                         <state key="normal" title="Тыкни">
@@ -55,6 +55,9 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="cBm-P0-ycF" secondAttribute="bottom" constant="10" id="reu-06-kWE"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="1Wo-ai-HmK">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="BKg-Cf-lik"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="imageView" destination="VTN-o5-hck" id="Sd2-9z-Fqq"/>
                         <outlet property="titleLabel" destination="jcH-h6-FhZ" id="SOi-UR-aHh"/>
@@ -64,10 +67,11 @@
                 <tapGestureRecognizer id="Lf6-hR-A5x">
                     <connections>
                         <action selector="tapAction:" destination="BYZ-38-t0r" id="Qte-Ws-U3q"/>
+                        <segue destination="I3J-l1-Oaz" kind="show" identifier="goToPVC" id="phh-og-g7O"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-339" y="66"/>
+            <point key="canvasLocation" x="560.74766355140184" y="65.442764578833703"/>
         </scene>
         <!--Picture View Controller-->
         <scene sceneID="fBE-CQ-35g">
@@ -77,53 +81,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="COX-4w-vNw">
-                                <rect key="frame" x="0.0" y="263" width="428" height="400"/>
-                                <gestureRecognizers/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="57P-T8-p07">
+                                <rect key="frame" x="0.0" y="88" width="428" height="804"/>
+                                <subviews>
+                                    <imageView contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cva-L3-AxY">
+                                        <rect key="frame" x="0.0" y="0.0" width="428" height="826"/>
+                                    </imageView>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="400" id="4o1-au-f48"/>
+                                    <constraint firstItem="cva-L3-AxY" firstAttribute="top" secondItem="49A-Xq-lw9" secondAttribute="top" id="Ce0-8c-en0"/>
+                                    <constraint firstAttribute="trailing" secondItem="cva-L3-AxY" secondAttribute="trailing" id="EJY-m7-dWX"/>
+                                    <constraint firstAttribute="bottom" secondItem="cva-L3-AxY" secondAttribute="bottom" constant="-22" id="QyO-Lc-Kmm"/>
+                                    <constraint firstItem="cva-L3-AxY" firstAttribute="height" secondItem="57P-T8-p07" secondAttribute="height" multiplier="1.02736" id="ToQ-6I-hC4"/>
+                                    <constraint firstItem="cva-L3-AxY" firstAttribute="centerX" secondItem="57P-T8-p07" secondAttribute="centerX" id="kCN-EA-7NB"/>
+                                    <constraint firstItem="cva-L3-AxY" firstAttribute="width" secondItem="57P-T8-p07" secondAttribute="width" id="ske-gQ-62Z"/>
                                 </constraints>
-                                <connections>
-                                    <outletCollection property="gestureRecognizers" destination="4JN-MB-ViY" appends="YES" id="iNm-2R-6N9"/>
-                                    <outletCollection property="gestureRecognizers" destination="o3J-4H-act" appends="YES" id="eSF-Tq-DlK"/>
-                                </connections>
-                            </imageView>
+                                <viewLayoutGuide key="contentLayoutGuide" id="49A-Xq-lw9"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Ucg-nZ-teq"/>
+                            </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vaR-Jg-JW0"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="COX-4w-vNw" firstAttribute="trailing" secondItem="vaR-Jg-JW0" secondAttribute="trailing" id="Jmy-UA-aBS"/>
-                            <constraint firstItem="COX-4w-vNw" firstAttribute="leading" secondItem="vaR-Jg-JW0" secondAttribute="leading" id="TcW-di-G6u"/>
-                            <constraint firstItem="COX-4w-vNw" firstAttribute="centerY" secondItem="xDi-nX-e9k" secondAttribute="centerY" id="cAQ-lG-lxP"/>
-                            <constraint firstItem="COX-4w-vNw" firstAttribute="centerX" secondItem="xDi-nX-e9k" secondAttribute="centerX" id="hlb-h1-Ouc"/>
+                            <constraint firstItem="57P-T8-p07" firstAttribute="leading" secondItem="vaR-Jg-JW0" secondAttribute="leading" id="44V-Kn-fP1"/>
+                            <constraint firstItem="vaR-Jg-JW0" firstAttribute="bottom" secondItem="57P-T8-p07" secondAttribute="bottom" id="Mp3-xl-Y3s"/>
+                            <constraint firstItem="57P-T8-p07" firstAttribute="trailing" secondItem="vaR-Jg-JW0" secondAttribute="trailing" id="eGV-mg-u2k"/>
+                            <constraint firstItem="57P-T8-p07" firstAttribute="top" secondItem="vaR-Jg-JW0" secondAttribute="top" id="pKA-Ge-V4H"/>
                         </constraints>
-                        <connections>
-                            <outletCollection property="gestureRecognizers" destination="4X4-a1-JG2" appends="YES" id="5lU-aW-J2C"/>
-                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" id="tft-Nd-fiw"/>
                     <connections>
-                        <outlet property="imageView" destination="COX-4w-vNw" id="d21-F4-dE3"/>
+                        <outlet property="imageView" destination="cva-L3-AxY" id="N8Q-MJ-PwX"/>
+                        <outlet property="scrollView" destination="57P-T8-p07" id="KWH-CO-DAt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="okU-wM-fqR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-                <pinchGestureRecognizer id="4JN-MB-ViY">
-                    <connections>
-                        <action selector="pinchAction:" destination="I3J-l1-Oaz" id="ooF-U1-bXC"/>
-                    </connections>
-                </pinchGestureRecognizer>
-                <tapGestureRecognizer id="4X4-a1-JG2">
-                    <connections>
-                        <action selector="dismissView:" destination="I3J-l1-Oaz" id="hWj-bI-03U"/>
-                    </connections>
-                </tapGestureRecognizer>
-                <panGestureRecognizer minimumNumberOfTouches="1" id="o3J-4H-act">
-                    <connections>
-                        <action selector="panAction:" destination="I3J-l1-Oaz" id="3s0-j7-saU"/>
-                    </connections>
-                </panGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="553.73831775700933" y="64.794816414686835"/>
+            <point key="canvasLocation" x="1453.7383177570093" y="64.794816414686835"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="wgH-Vb-Fcd">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1qa-F6-ija" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="96J-OK-8Zf">
+                        <rect key="frame" x="0.0" y="44" width="428" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="1Rg-Fd-McL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ixa-2r-Di7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-339.2523364485981" y="65.442764578833703"/>
         </scene>
     </scenes>
     <resources>
